tests/snapshots/tui_snapshots__uninstall_preview_at_minimum_supported_size.snap
---
source: tests/tui_snapshots.rs
assertion_line: 1646
expression: "normalize_install_screen(&temporary, render(&app, 80, 24))"
---
 ◆ skilled  global                                ● ready · 1 source registered
 1┌ Uninstall skill ───────────────────────────────────── managed links only ┐
  │                                                                          │
▌ │  Skill: portable                                                         │
▁▁│                                                                          │▁▁
  │  Targets                                                                 │
▌ │  ! Claude Code · remove the managed link                                 │
  │    [TEMP]                      /home/.claude/skills/portable             │
  │    receipt target: [CANONICAL]                 /src/skills/portable      │
  │  ! Codex · remove the managed link                                       │
  │    [TEMP]                      /home/.agents/skills/portable             │
  │    receipt target: [CANONICAL]                 /src/skills/portable      │
  │  ! OpenCode · remove the managed link                                    │
  │    [TEMP]                      /home/.config/opencode/skills/portable    │
  │    receipt target: [CANONICAL]                 /src/skills/portable      │
  │                                                                          │
  │  Before you confirm                                                      │
  │  ! after this uninstall, OpenCode would find nothing under this name     │
  │                                                                          │
  │  ──────────────────────────────────────────────────────────────────────  │
  │  3 managed links to remove · more below                       Esc Close  │
  │                                                                          │
  └──────────────────────────────────────────────────────────────────────────┘
 j/k Scroll   Esc Close   Ctrl-C Quit
