tests/snapshots/tui_snapshots__uninstall_preview_at_wide_size.snap
---
source: tests/tui_snapshots.rs
expression: "normalize_install_screen(&temporary, render(&app, 120, 40))"
---
 ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
▕                                                                                                                      ▏
▕ ◆┌ Uninstall skill ─────────────────────────────────────────────────────────────────────────── managed links only ┐d ▏
▕▁▁│                                                                                                                │▁▁▏
▕  │  Skill: portable                                                                                               │  ▏
▕ 1│                                                                                                                │  ▏
▕▁▁│  Targets                                                                                                       │▁▁▏
▕  │  ! Claude Code · remove the managed link                                                                       │  ▏
▕▌ │    [TEMP]                      /home/.claude/skills/portable                                                   │  ▏
▕──│    receipt target: [CANONICAL]                 /src/skills/portable                                            │▁ ▏
▕  │    receipt source 1 · catalog skills · variant skills/portable                                                 │  ▏
▕──│  ! Codex · remove the managed link                                                                             │─ ▏
▕▌ │    [TEMP]                      /home/.agents/skills/portable                                                   │  ▏
▕──│    receipt target: [CANONICAL]                 /src/skills/portable                                            │  ▏
▕  │    receipt source 1 · catalog skills · variant skills/portable                                                 │  ▏
▕  │  ! OpenCode · remove the managed link                                                                          │  ▏
▕  │    [TEMP]                      /home/.config/opencode/skills/portable                                          │─ ▏
▕  │    receipt target: [CANONICAL]                 /src/skills/portable                                            │  ▏
▕  │    receipt source 1 · catalog skills · variant skills/portable                                                 │  ▏
▕  │                                                                                                                │─ ▏
▕  │  Before you confirm                                                                                            │  ▏
▕  │  ! after this uninstall, OpenCode would find nothing under this name                                           │  ▏
▕  │                                                                                                                │  ▏
▕  │  Source content and agent skill roots are not removed.                                                         │  ▏
▕  │                                                                                                                │l ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │─ ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │l ▏
▕  │  ────────────────────────────────────────────────────────────────────────────────────────────────────────────  │  ▏
▕  │  3 managed links to remove                                                       Enter Uninstall   Esc Cancel  │  ▏
▕  │                                                                                                                │k ▏
▕  └────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  ▏
▕ Enter Uninstall   Esc Cancel   Ctrl-C Quit                                                                           ▏
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
