tests/snapshots/tui_snapshots__uninstall_report_at_wide_size.snap
---
source: tests/tui_snapshots.rs
assertion_line: 1661
expression: "normalize_install_screen(&temporary, render(&app, 120, 40))"
---
 ▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁
▕                                                                                                                      ▏
▕ ◆┌ Uninstall result ───────────────────────────────────────────────────────────────────────────── already applied ┐d ▏
▕▁▁│                                                                                                                │▁▁▏
▕  │  Skill: portable                                                                                               │  ▏
▕ 1│  ✓ Claude Code · link removed                                                                                  │  ▏
▕▁▁│    [TEMP]                      /home/.claude/skills/portable                                                   │▁▁▏
▕  │  ✓ Codex · link removed                                                                                        │  ▏
▕▌ │    [TEMP]                      /home/.agents/skills/portable                                                   │  ▏
▕▁▁│  ✓ OpenCode · link removed                                                                                     │▁ ▏
▕  │    [TEMP]                      /home/.config/opencode/skills/portable                                          │  ▏
▕  │                                                                                                                │  ▏
▕  │  Source content and agent skill roots were not removed.                                                        │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │. ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │                                                                                                                │  ▏
▕  │  ────────────────────────────────────────────────────────────────────────────────────────────────────────────  │  ▏
▕  │  Uninstalled and verified                                                                           Esc Close  │  ▏
▕  │                                                                                                                │  ▏
▕  └────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  ▏
▕ Esc Close   Ctrl-C Quit                                                                                              ▏
 ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
